fix: show scrollbar webkit

--- a/src/layouts/general/layout.module.css
+++ b/src/layouts/general/layout.module.css
@@ -303,7 +303,7 @@
 .nav__inner {
   position: sticky;
   top: 0;
-  overflow: auto;
+  overflow-y: auto;
   padding: 0rem 2rem 2rem;
   font-size: 1.2rem;
   width: 100vw;
@@ -557,11 +557,20 @@
   }
   .nav__handbooks__container {
     overflow-x: hidden;
+    padding-right: 1rem;
     height: 100%;
   }
   .nav__handbooks__container::-webkit-scrollbar {
-    display: none;
+    background-color: var(--color-secondary1__shade2);
+    border-radius: 10px;
+    width: 10px;
   }
+
+  .nav__handbooks__container::-webkit-scrollbar-thumb {
+    background-color: var(--color-secondary4__shade2);
+    border-radius: 10px;
+  }
+
   .header,
   .header__dark {
     z-index: 3;
